# brt

./: Cargo.toml
brt_core/: Cargo.toml
brt_core/src/: index_registry.rs  indexable.rs  lib.rs  main.rs  polars_documents.rs
pybrt/: Cargo.toml  pyproject.toml
pybrt/benchmarking/: benchmark_indexing.py  pybrt_vs_eland.py
pybrt/src/: lib.rs  util.rs
pybrt/test/: test_rust_bindings.py
