[package]
name = "brt-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
polars = {workspace = true}
indicatif = "0.17.7"
lazy_static = "1.4.0"
tantivy = "0.21.1"
rayon = "1.8.0"
tempfile = "3.9.0"
