[package]
name = "pybrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybrt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.2"
brt-core = { workspace = true }
lazy_static = "1.4.0"
pyo3-polars = "0.10.0"
polars = {workspace = true}
